// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing: Apollo MockedProvider should test three state such as loading, final and error Test result : Once render, it will return child component 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignContent": "space-between",
        "alignItems": "center",
        "padding": 8,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/resources/images/general_error/general_error.png",
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 32,
            "fontWeight": "700",
            "lineHeight": 41,
          },
          Object {
            "padding": 8,
          },
        ]
      }
    >
      Ooops!
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 22,
          },
        ]
      }
    >
      Something went wrong
    </Text>
  </View>
  <View
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityStates={Array []}
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          this is a mock button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing: Apollo MockedProvider should test three state such as loading, final and error Test result : Render loading state initially and return no component 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignContent": "space-between",
        "alignItems": "center",
        "padding": 8,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/resources/images/general_error/general_error.png",
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 32,
            "fontWeight": "700",
            "lineHeight": 41,
          },
          Object {
            "padding": 8,
          },
        ]
      }
    >
      Ooops!
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 22,
          },
        ]
      }
    >
      Something went wrong
    </Text>
  </View>
  <View
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityStates={Array []}
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          this is a mock button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing: Apollo MockedProvider should test three state such as loading, final and error Test result : Set mock-error response and return Error UI 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": "100%",
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignContent": "space-between",
        "alignItems": "center",
        "padding": 8,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/resources/images/general_error/general_error.png",
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 32,
            "fontWeight": "700",
            "lineHeight": 41,
          },
          Object {
            "padding": 8,
          },
        ]
      }
    >
      Ooops!
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontSize": 17,
            "fontWeight": "400",
            "lineHeight": 22,
          },
        ]
      }
    >
      Something went wrong
    </Text>
  </View>
  <View
    style={
      Object {
        "padding": 8,
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityStates={Array []}
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "padding": 8,
                "textAlign": "center",
              },
            ]
          }
        >
          this is a mock button
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Testing: Course manual completion Test result : course complete and loading action modal to confirm 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.7)",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "borderRadius": 4,
              "flex": 1,
              "justifyContent": "center",
              "marginHorizontal": 24,
              "marginVertical": 48,
            },
            Object {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "marginHorizontal": 24,
              "marginVertical": 16,
            }
          }
        >
          <Image
            source={
              Object {
                "testUri": "../../../src/resources/images/course_complete/course_complete.png",
              }
            }
            style={
              Object {
                "alignItems": "center",
                "resizeMode": "contain",
                "width": 525,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "marginHorizontal": 24,
              "marginVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#3D444B",
                "fontSize": 34,
                "fontWeight": "700",
                "lineHeight": 41,
                "paddingBottom": 16,
                "textAlign": "center",
              }
            }
          >
            translated course.course_complete.title with undefined
          </Text>
          <Text
            style={
              Object {
                "color": "#3D444B",
                "fontSize": 17,
                "fontWeight": "400",
                "lineHeight": 22,
                "paddingBottom": 16,
                "textAlign": "center",
              }
            }
          >
            translated course.course_complete.description with undefined
          </Text>
        </View>
        <View
          style={
            Object {
              "justifyContent": "space-between",
              "marginVertical": 16,
              "minHeight": 104,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityStates={Array []}
            accessible={true}
            focusable={true}
            isTVSelectable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "padding": 8,
                      "textAlign": "center",
                    },
                  ]
                }
              >
                this is a mock button
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;
